GSS NEWS -- History of user-visible changes.                    -*- outline -*-
Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
See the end for copying conditions.

* Version 0.1.3 (unreleased)

** Build fixes and code cleanups.

** i18n: Added Finnish translation, thanks to Jorma Karvonen.

** API and ABI modifications.
No changes since last version.

* Version 0.1.2 (released 2010-01-19)

** Build fixes and code cleanups.

** i18n: Added Finnish translation, thanks to Jorma Karvonen.

** API and ABI modifications.
No changes since last version.

* Version 0.1.1 (released 2009-04-03)

** libgss: Fix memory leak in gss_release_oid_set.

** libgss: Fix bug that prevented error messages from being translated.

** libgss krb5: no longer supports service names without hostname.
The function gss_canonicalize_name will return a
GSS_KRB5_S_G_BAD_SERVICE_NAME minor status code if you pass it a
service name without a @hostname part.  The reason is that there is no
secure way to find a canonical name of the local host inside the
library.  Instead, the application must provide one.

** tests: Fix debug output and memory leaks.

** Install a libgss-*.def file when building under MinGW.

** Build fixes for MinGW.
The krb5 mechanism now builds under MinGW as well.

** API and ABI modifications.
No changes since last version.

* Version 0.1.0 (released 2009-03-30)

** libgss: Shared library version is incremented.
The library is backwards compatible on source code level if you don't
use the gss_krb5* functions or the gss_alloc_fail_function variable.

** libgss: Kerberos V5 function symbols gss_krb5* not exported.
They were never intended to be exported and have never been part of
any header file.

** libgss: Obsolete gss_xalloc_die and gss_alloc_fail_function not exported.

** libgss: Add GSS_KRB5_NT_MACHINE_UID_NAME{,_static}.
Defined in RFC 1964.

** libgss: New header file gss/krb5-ext.h used for GNU GSS specific extensions.