@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 0.1.3 (unreleased)
 
+** KRB5: Add support for channel bindings.
+
 ** Build fixes and code cleanups.
 
 ** i18n: Added Finnish translation, thanks to Jorma Karvonen.
